syntax = "proto3";
package dev.fyn;

option php_generic_services = true;

service HelloWorld {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest {
    string name = 1;
}

message SayHelloResponse {
    string reply = 1;
}